# cosmic

./: BASICS.md  Cargo.toml  README.md  build.zig  build.zig.zon  readme.md
docs/: basics.md  index.html
examples/: fundamentals.rx
examples/scripts/: behaviors.ruka  behaviours.ruka  fundamentals.ruka  fundamentals.rx  fundamentals.rxi
llvm/: llvm.zig
src/: cli.zig  lib.rs  main.rs  main.zig  prelude.rs  script.zig
src/interpreter/: parser.zig  scanner.rs  scanner.zig  token.rs  token.zig
src/scanning/: scanner.rs  token.rs
src/utilities/: file.rs  mod.rs
tests/scripts/: test.ta  test.tali
