[package]
name = "ruka"
version = "0.1.0"
edition = "2021"
description = "General Purpose Programming Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "env"] }
const_format = "0.2.32"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
